# kstring

./: .clippy.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  azure-pipelines.yml  release.toml
.github/: renovate.json5  settings.yml
.github/workflows/: audit.yml  ci.yml  committed.yml  pre-commit.yml  rust-next.yml  spelling.yml
benches/: access.rs  clone.rs  compare.rs
examples/: bench.rs
src/: backend.rs  cow.rs  fixed.rs  inline.rs  lib.rs  ref.rs  stack.rs  string.rs  string_cow.rs  string_ref.rs
tests/: string.rs
