[package]
name = "kstring"
version = "1.0.4"
description = "Key String: optimized for map keys"
authors = ["Ed Page <eopage@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cobalt-org/kstring"
documentation = "https://docs.rs/kstring"
readme = "README.md"
categories = ["data-structures", "text-processing"]
keywords = ["serde", "serialization", "string"]
edition = "2018"

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/cobalt-org/kstring/compare/{{tag_name}}...HEAD", exactly=1},
]

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = ["serde"]
arc = []
max_inline = []
bench_subset_unstable = []

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.3"
smol_str = "0.1.18"

[[bench]]
name = "clone"
harness = false

[[bench]]
name = "access"
harness = false
