[package]
name = "kstring"
version = "1.0.6"
description = "Key String: optimized for map keys"
authors = ["Ed Page <eopage@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cobalt-org/kstring"
documentation = "https://docs.rs/kstring"
readme = "README.md"
categories = ["data-structures", "text-processing"]
keywords = ["serde", "serialization", "string"]
edition = "2018"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/cobalt-org/kstring/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
default = ["serde"]
arc = []
max_inline = []
bench_subset_unstable = []

[dependencies]
serde = { version = "1.0", optional = true }
static_assertions = "1.1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "clone"
harness = false

[[bench]]
name = "access"
harness = false

[profile.release]
debug = 1
