[package]
name = "kstring"
version = "1.1.0"
description = "Key String: optimized for map keys"
authors = ["Ed Page <eopage@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cobalt-org/kstring"
documentation = "https://docs.rs/kstring"
readme = "README.md"
categories = ["data-structures", "text-processing"]
keywords = ["serde", "serialization", "string"]
edition = "2018"
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]


[package.metadata.docs.rs]
all-features = true

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/cobalt-org/kstring/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
default = ["unsafe"]

## O(1) clone support
arc = []
## Inline (stack) strings use the full width of `KString`s
max_inline = []
## Allow unsafe code
unsafe = []

unstable_bench_subset = []

[dependencies]
static_assertions = "1.1.0"

## `serde` compatibility
serde = { version = "1.0", optional = true }

document-features = { version = "0.2", optional = true }

[dev-dependencies]
criterion = "0.3"
proptest = "1.0.0"

[[bench]]
name = "clone"
harness = false

[[bench]]
name = "access"
harness = false

[profile.release]
debug = 1
